<resources>
    <string name="app_name">Quiz IT</string>
    <string name="aplicar_quastionario"><![CDATA[Aplicar quastionario>]]></string>
    <string name="editar_questionario"><![CDATA[Editar questionario>]]></string>
    <string name="quiz_it">Quiz IT</string>
    <string name="pergunta1">pergunta1</string>
    <string name="pergunta2">pergunta2</string>
    <string name="pergunta3">pergunta3</string>
    <string name="pergunta10">pergunta10</string>
    <string name="pergunta9">pergunta9</string>
    <string name="pergunta5">pergunta5</string>
    <string name="pergunta7">pergunta7</string>
    <string name="pergunta8">pergunta8</string>
    <string name="pergunta4">pergunta4</string>
    <string name="pergunta6">pergunta6</string>
    <string name="lista1">lista1</string>
    <string name="lista2">lista2</string>
    <string name="pergunta11">pergunta11</string>
    <string name="pergunta12">pergunta12</string>
    <string name="pergunta13">pergunta13</string>
    <string name="pergunta14">pergunta14</string>
    <string name="pergunta15">pergunta15</string>
    <string name="pergunta16">pergunta16</string>
    <string name="lista3">lista3</string>
    <string name="pergunta17">pergunta17</string>
    <string name="pergunta18">pergunta18</string>
    <string name="pergunta19">pergunta19</string>
    <string name="pergunta20">pergunta20</string>
    <string name="pergunta21">pergunta21</string>
    <string name="pergunta22">pergunta22</string>
    <string name="pergunta23">pergunta23</string>
    <string name="pergunta24">pergunta24</string>
    <string name="pergunta25">pergunta25</string>
    <string name="pergunta26">pergunta26</string>
    <string name="pergunta27">pergunta27</string>
    <string name="pergunta28">pergunta28</string>
    <string name="pergunta29">pergunta29</string>
    <string name="pergunta30">pergunta30</string>
    <string name="se_vc_tem_carne_e_osso_e_pensa_logo_vc_um">se vc tem carne e osso e pensa, logo vc é um</string>
    <string name="a">(A)</string>
    <string name="b">(B)</string>
    <string name="c">(C)</string>
    <string name="d">(D)</string>
    <string name="e">(E)</string>
    <string name="_pergunta"><![CDATA[Proxima>]]></string>
    <string name="clique_para_informa_oes_de_menu">clique para informaçoes de menu</string>
    <string name="pergunta_1">Pergunta 1 :</string>
    <string name="a_alternativa_correta">A alternativa correta é ?</string>
    <string name="humano">humano</string>
    <string name="tituloHome_quiz_it">Quiz IT</string>
    <string name="homeEntre">Entre</string>
    <string name="homeTestar">Testar</string>
    <string name="homeEmail">Email:</string>
    <string name="homeSenha">Senha:</string>
    <string name="homebtnArea_do_professor"><![CDATA[area do professor>]]></string>
    <string name="homebtnResetSenha">esqueci a senha!!</string>
    <string name="homebtnCriarconta">criar conta</string>
    <string name="homebtnContagoogle">TODO</string>
    <string name="logprofessorTitulo">Quiz IT</string>
    <string name="logprofessorBtnLOgar">Logar</string>
    <string name="logprofessorbtnVoltar">voltar</string>
    <string name="logprofessorTxt_usuario">usuario :</string>
    <string name="logprofessorTxt_senha">senha :</string>
    <string name="logprofessorTxt_area_administrador">area : administrador</string>
    <string name="logprofessorbtnEsqueci_minha_senha">esqueci minha senha</string>
    <string name="txtResposta_D_abacaxi">abacaxi</string>
    <string name="txtResposta_B_robo">robo</string>
    <string name="txtResposta_E_ia">IA</string>
    <string name="txtPergunta1_se_vc_tem_carne_e_osso_e_pensa_logo_vc_um">se vc tem carne e osso e pensa, logo vc é um</string>
    <string name="txtIndice_pergunta">Pergunta 1 :</string>
    <string name="txtIndicePerguntas_alternativa_correta">A alternativa correta é ?</string>
    <string name="desafiobtnProxima"><![CDATA[Proxima>]]></string>
    <string name="btndesafioCncelar">cncelar</string>
    <string name="checkboxE">(E)</string>
    <string name="checkboxD">(D)</string>
    <string name="checkboxC">(C)</string>
    <string name="checkboxB">(B)</string>
    <string name="checkboxA">(A)</string>
    <string name="txtpontos">pontos:</string>
    <string name="txtsomaInstantaneo">TextView</string>
    <string name="txtResposta_a_copo">Copo descartavel</string>
    <string name="txtViewNomeResultado">fulaninho</string>
    <string name="txtViewResultadoTotalpontos">0</string>
    <string name="btnResultadoexportar">Exportar</string>
    <string name="btnResultadohome">retornar</string>
    <string name="viewResultadoResultadoResultado">total de pontos=</string>
    <string name="txtEdetPquiz_it">Quiz IT</string>
    <string name="txtEdtpergunta"><![CDATA[pergunta>]]></string>
    <string name="btnEdtvoltar"><![CDATA[<voltar]]></string>
    <string name="btnEdtsalvar">salvar</string>
    <string name="txtEdtPpergunta">TextView</string>
    <string name="boxEdtop_o4">Opção4</string>
    <string name="boxEdtop_o10">Opção10</string>
    <string name="boxEdtop_o9">Opção9</string>
    <string name="baxEdtop_o8">Opção8</string>
    <string name="boxEdtop_o7">Opção7</string>
    <string name="boxEdtop_o6">Opção6</string>
    <string name="boxEdtop_o5">Opção5</string>
    <string name="boxEdtop_o3">Opção3</string>
    <string name="boxEdtop_o2">Opção2</string>
    <string name="boxEdtop_o_a">Opção1</string>
</resources>